[package]
edition = "2024"
license = "MIT"
name = "eth_wallet"
version = "0.0.0"

[dependencies]
alloy = {version = "2.1.1", features = ["full", "contract", "providers", "signers", "signer-local", "signer-mnemonic"]}
argon2 = {version = "0.5.3", features = ["password-hash"]}
bip39 = {version = "2.2.2", features = ["rand"]}
chacha20poly1305 = "0.11.0"
hex = "0.4.3"
serde = {version = "1.0.228", features = ["derive"]}
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = {version = "1.52.3", features = ["full", "rt-multi-thread", "tracing"]}
toml = "1.1.2"
tracing = "0.1.44"
wallet_utils = {git = "https://github.com/hirokuma/rust-wallet-utils.git", version = "0.1.0"}
wincode = {version = "0.5.5", features = ["derive"]}
zeroize = "1.9.0"

[dev-dependencies]
anyhow = "1.0.103"
tracing-subscriber = {version = "0.3.23", features = ["env-filter"]}
